--- a/src/blocks/gif/styles/style.scss
+++ b/src/blocks/gif/styles/style.scss
@@ -5,4 +5,12 @@
  */
 
 .wp-block-coblocks-gif {
+	margin: 0 0 1.5em;
+	padding: 0;
+
+	img {
+		vertical-align: middle;
+		display: block;
+		width: 100%;
+	}
 }
