Remove accordion block focus within Gutenberg

--- a/src/blocks/accordion/styles/editor.scss
+++ b/src/blocks/accordion/styles/editor.scss
@@ -9,6 +9,10 @@
 			&::after {
 				display: none;
 			}
+
+			&:focus {
+				outline: none;
+			}
 		}
 
 		&--open .wp-block-coblocks-accordion__title {
