Adjust accordion background

--- a/src/common.scss
+++ b/src/common.scss
@@ -5,7 +5,7 @@ $gray: rgba(0, 0, 0, 0.52);
 
 //Accordion.
 $accordion-border-radius: 4px;
-$accordion-background: #eee;
+$accordion-background: #f2f2f2;
 
 // Gutenberg Vars.
 
