--- a/src/blocks/author/styles/style.scss
+++ b/src/blocks/author/styles/style.scss
@@ -66,7 +66,7 @@
 
 	&__content-button {
 		appearance: none;
-		border-radius: 4px;
+		border-radius: $accordion-border-radius;
 		border: 1px solid currentColor;
 		box-shadow: none !important;
 		cursor: pointer;
@@ -78,6 +78,7 @@
 		text-decoration: none;
 		white-space: normal;
 		word-break: break-all;
+		text-decoration: none !important;
 
 		&:hover {
 			opacity: 0.6;
