--- a/src/common.scss
+++ b/src/common.scss
@@ -2,6 +2,7 @@
 $black: rgba(0, 0, 0, 0.8);
 $lightgray: rgba(0, 0, 0, 0.15);
 $gray: rgba(0, 0, 0, 0.52);
+$twitter: #1da1f2;
 
 //Accordion.
 $accordion-border-radius: 4px;
