--- a/src/blocks/alert/styles/style.scss
+++ b/src/blocks/alert/styles/style.scss
@@ -38,10 +38,6 @@
 
 	& &__text {
 
-		&:last-child {
-			margin-bottom: 0;
-		}
-
 		a {
 			box-shadow: 0 -1px 0 inset;
 			color: inherit;
@@ -51,6 +47,10 @@
 				box-shadow: 0 -2px 0 inset;
 				color: inherit;
 			}
+		}
+
+		p:last-child {
+			margin-bottom: 0;
 		}
 	}
 }
