Update Dynamic Separator

--- a/src/blocks/dynamic-separator/styles/editor.scss
+++ b/src/blocks/dynamic-separator/styles/editor.scss
@@ -1,6 +1,6 @@
 .editor-block-list__block[data-type="coblocks/dynamic-separator"] {
 
-	.coblocks-spacer-control {
+	.wp-block-coblocks-dynamic-separator {
 		margin-bottom: 0;
 
 		&::before {
@@ -8,24 +8,20 @@
 		}
 	}
 
-	&.is-selected::before {
-		outline: none;
-	}
-
-	.editor-block-list__block-edit {
-		outline: 1px dashed $lightgray;
-	}
-
-	&.is-selected .editor-block-list__block-edit,
-	&.is-hovered .editor-block-list__block-edit {
-		outline: 1px dotted $lightgray;
-	}
-
 	&.is-selected .editor-block-list__block-edit {
-		outline: 1px solid #e2e4e7;
-	}
+		outline: 1px dotted $lightgray;
 
-	.wp-block-coblocks-dynamic-separator.hr-style--fullwidth::before {
-		width: calc(100% - 10px);
+		.wp-block-spacer__resize-handler-top,
+		.wp-block-spacer__resize-handler-bottom {
+			display: block;
+		}
+
+		.wp-block-spacer__resize-handler-bottom {
+			margin-bottom: -4px;
+		}
+
+		.wp-block-spacer__resize-handler-top {
+			margin-top: -4px;
+		}
 	}
 }
