--- a/src/blocks/pricing-table/styles/editor.scss
+++ b/src/blocks/pricing-table/styles/editor.scss
@@ -19,5 +19,13 @@
 	.core-blocks-button__inline-link {
 		width: 100%;
 		margin-top: 14px;
+
+		> div {
+			width: calc(100% - 72px);
+		}
+
+		.editor-url-input + .editor-url-input {
+			margin-top: 2px;
+		}
 	}
 }
