wp.blocks -> wp.editor for Accordion block
And other minor G2.9 fixes

--- a/src/blocks/accordion/styles/editor.scss
+++ b/src/blocks/accordion/styles/editor.scss
@@ -23,4 +23,8 @@
 	&.is-selected .wp-block-coblocks-accordion__title {
 		border-radius: $accordion-border-radius $accordion-border-radius 0 0;
 	}
+
+	.components-toolbar__coblocks-accordion {
+		border-left: 0;
+	}
 }
