--- a/src/blocks/click-to-tweet/styles/editor.scss
+++ b/src/blocks/click-to-tweet/styles/editor.scss
@@ -14,6 +14,8 @@
 
 		&__twitter-btn {
 			line-height: 34px;
+			margin-left: 40px;
+			margin-top: 15px;
 
 			&:active::before {
 				animation: none;
