Ensure box shadow and text-decoration do not affect social icons

--- a/src/blocks/social/styles/style.scss
+++ b/src/blocks/social/styles/style.scss
@@ -7,12 +7,12 @@
 	&__button {
 		background-color: #222;
 		background-size: cover;
-		box-shadow: none;
+		box-shadow: none !important;
 		display: inline-block;
 		height: 28px;
 		padding: 0;
 		position: relative;
-		text-decoration: none;
+		text-decoration: none !important;
 		vertical-align: middle;
 		width: 28px;
 
