Use color classes in the Click to Tweet block

--- a/src/blocks/click-to-tweet/styles/style.scss
+++ b/src/blocks/click-to-tweet/styles/style.scss
@@ -45,9 +45,12 @@
 		}
 	}
 
+	&__twitter-btn:not(.has-button-color) {
+		background: $twitter;
+	}
+
 	&__twitter-btn {
 		appearance: none;
-		background: $twitter;
 		border-radius: $accordion-border-radius;
 		border: none;
 		box-shadow: none !important;
