Set a max width for the Click to Tweet block's empty button placeholder

--- a/src/blocks/click-to-tweet/styles/editor.scss
+++ b/src/blocks/click-to-tweet/styles/editor.scss
@@ -20,6 +20,10 @@
 			&:active::before {
 				animation: none;
 			}
+
+			&[data-is-placeholder-visible=true] {
+				max-width: 128px;
+			}
 		}
 
 		&__via {
