Clean up font sizes for the Click to Tweet block

--- a/src/blocks/click-to-tweet/styles/editor.scss
+++ b/src/blocks/click-to-tweet/styles/editor.scss
@@ -21,7 +21,7 @@
 				animation: none;
 			}
 
-			&[data-is-placeholder-visible=true] {
+			&[data-is-placeholder-visible="true"] {
 				max-width: 128px;
 			}
 		}
