--- a/src/blocks/gif/styles/editor.scss
+++ b/src/blocks/gif/styles/editor.scss
@@ -8,6 +8,12 @@
 		}
 	}
 
+	&[data-align="center"] .wp-block-coblocks-gif,
+	&[data-align="center"][data-resized="false"] .wp-block-coblocks-gif>div {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
 	.wp-block-coblocks-gif {
 		margin: 0;
 		padding: 50px 0;
