--- a/src/blocks/highlight/styles/editor.scss
+++ b/src/blocks/highlight/styles/editor.scss
@@ -4,6 +4,10 @@
 		margin: 0;
 	}
 
+	.wp-block-coblocks-highlight {
+		padding: 0;
+	}
+
 	.wp-block-coblocks-highlight__content[data-is-placeholder-visible="true"] {
 		line-height: 1.4;
 	}
