Fix pricing table block line height bug

--- a/src/blocks/pricing-table/styles/style.scss
+++ b/src/blocks/pricing-table/styles/style.scss
@@ -36,7 +36,7 @@
 		&__amount {
 			font-size: 5em;
 			letter-spacing: normal;
-			line-height: 1;
+			line-height: 1 !important;
 			margin: 0;
 			padding: 0;
 		}
