--- a/src/blocks/click-to-tweet/styles/editor.scss
+++ b/src/blocks/click-to-tweet/styles/editor.scss
@@ -40,6 +40,32 @@
 			padding-left: 5px;
 			padding-right: 2px;
 			white-space: nowrap;
+
+			svg {
+				position: relative;
+				top: 1px;
+			}
+		}
+	}
+}
+
+.has-fixed-toolbar {
+
+	.wp-block-coblocks-click-to-tweet {
+
+		&__via {
+			margin: 4px;
+		}
+
+		&__via-label {
+			align-items: center;
+			display: flex;
+			padding-right: 4px;
+
+			svg {
+				position: relative;
+				top: 1px;
+			}
 		}
 	}
 }
