Fix: Resolve Pricing Table block display issue in Gutenberg 3.9

--- a/src/blocks/pricing-table-item/styles/editor.scss
+++ b/src/blocks/pricing-table-item/styles/editor.scss
@@ -13,6 +13,11 @@
 		}
 	}
 
+	.editor-block-list__block-edit {
+		margin-bottom: 12px;
+		margin-top: 12px;
+	}
+
 	.block-library-button__inline-link {
 		width: 100%;
 		margin-top: 14px;
