Fix url input width for Pricing Table item

--- a/src/blocks/pricing-table-item/styles/editor.scss
+++ b/src/blocks/pricing-table-item/styles/editor.scss
@@ -29,6 +29,10 @@
 		.editor-url-input + .editor-url-input {
 			margin-top: 2px;
 		}
+
+		input[type=text] {
+			width: 100%;
+		}
 	}
 
 	.wp-block-button .editor-rich-text__tinymce {
