Remove double-nesting, so it's easier for themes to override

--- a/src/blocks/alert/styles/style.scss
+++ b/src/blocks/alert/styles/style.scss
@@ -63,7 +63,7 @@
 		border-color: #313131;
 	}
 
-	& &__title {
+	&__title {
 		font-size: 1.2em;
 		font-weight: 400;
 		line-height: 1;
@@ -80,7 +80,7 @@
 		}
 	}
 
-	& &__text {
+	&__text {
 
 		&:last-child {
 			margin-bottom: 0;
