--- a/src/blocks/accordion/styles/style.scss
+++ b/src/blocks/accordion/styles/style.scss
@@ -1,62 +1,3 @@
-.wp-block-coblocks-accordion {
-	border-radius: 5px;
-	margin: 0 0 1.5em;
-
-	& + & {
-		margin-top: -0.85em;
-	}
-
-	&__title {
-		background: $accordion-background;
-		border-radius: $accordion-border-radius;
-		cursor: pointer;
-		padding: 10px 15px;
-		position: relative;
-
-		&::after {
-			border-radius: $accordion-border-radius;
-			bottom: 0;
-			content: "";
-			left: 0;
-			position: absolute;
-			right: 0;
-			top: 0;
-			transition: background 100ms cubic-bezier(0.694, 0, 0.335, 1);
-		}
-
-		&:hover::after {
-			background: rgba(#000, 0.0275);
-		}
-
-		&:focus {
-			outline: 1px dotted #aaa;
-			outline-offset: -4px;
-		}
-
-		p {
-			display: inline;
-
-			&:last-of-type {
-				margin-bottom: 0;
-			}
-		}
-	}
-
-	details[open] summary {
-		border-radius: $accordion-border-radius $accordion-border-radius 0 0;
-	}
-
-	&__content {
-		border-radius: 0 0 $accordion-border-radius $accordion-border-radius;
-		border: 1px solid $accordion-background;
-		border-top: 0;
-		padding: 15px 20px;
-	}
-
-	&__text {
-
-		&:last-of-type {
-			margin-bottom: 0;
-		}
-	}
+.wp-block-coblocks-accordion.alignfull {
+	padding: 0 12px;
 }
