--- a/src/blocks/pricing-table-item/styles/editor.scss
+++ b/src/blocks/pricing-table-item/styles/editor.scss
@@ -16,17 +16,19 @@
 	.editor-block-list__block-edit {
 		margin-bottom: 12px;
 		margin-top: 12px;
+		height: 100%;
 	}
 
 	.editor-inner-blocks {
+
 		.editor-block-list__insertion-point {
 			display: none;
 		}
 	}
 
 	.block-library-button__inline-link {
-		width: 100%;
 		margin-top: 5px;
+		width: 100%;
 
 		> div {
 			width: calc(100% - 72px);
