Improve Pricing Table item rendering on the frontenebd

--- a/src/blocks/pricing-table/styles/style.scss
+++ b/src/blocks/pricing-table/styles/style.scss
@@ -8,8 +8,7 @@
 			flex-wrap: wrap;
 			flex: 0 1 auto;
 			position: relative;
-			margin-left: -0.75rem !important;
-			margin-right: -0.75rem !important;
+			margin: -0.75rem !important;
 
 			.wp-block-coblocks-pricing-table-item {
 				flex-basis: 0;
